# libnpy

./: .clang-tidy  .gitignore  LICENSE  README.md  meson.build  npy.hpp
.github/workflows/: ci.yml  test.yml
data/: note.ipynb
include/: ValArray.hpp  npy.hpp
tests/: .clang-tidy  .gitignore  Makefile  createnpy.py  main.cpp  meson.build  test  test-read.cpp  test-save.cpp  test-write.cpp  test.cpp  test.hpp  test2.hpp  test3.hpp
tests/subprojects/: .gitignore  catch2.wrap
